# llama-stack-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  3DAY_SPRINT_PLAN.md  APPLICATION_ASPECTS.md  BLOG_POST.md  CHANGELOG.md  CONTRIBUTING.md  DEV_SPRINT_PLAN.md  Dockerfile  LICENSE  Makefile  POETRY_MIGRATION.md  README.md  WEB_INTEGRATION_SUMMARY.md  api_specification.yaml  demo.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup_mcp.sh  start.sh  test_direct_telemetry.py  test_improved_telemetry.py  test_simple_telemetry.py  test_telemetry_verification.py  test_updated_telemetry.py  test_web_integration.py
.github/: .pre-commit-config.yaml  pull_request_template.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: README.md  settings.py
deploy/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  k8s-deployment-scalable.yaml  k8s-deployment.yaml  nginx.conf  performance-improvements.md  run.sh
feast_feature_repo/: feature_definitions.py  feature_store.yaml
frontend/streamlit/: app.py
frontend/streamlit/assets/: README.md  bootstrap-app.css  main.js  styles.css  tailwind.css  template-components.css  template.html
frontend/streamlit/components/: __init__.py  analytics_tab.py  auth_components.py  bootstrap_components.py  document_library_tab.py  faiss_dashboard.py  file_upload_tab.py  responsive_ui.py  telemetry_dashboard.py  ui_components.py  web_content_tab.py
frontend/streamlit/core/: __init__.py  chat_interface.py  config.py  document_handler.py  faiss_sync_manager.py  llamastack_client.py  model_manager.py  persistent_storage.py  theme.py  utils.py  web_content_processor.py
frontend/streamlit/core/auth/: __init__.py  authentication.py  session_manager.py
frontend/streamlit/core/database/: __init__.py  connection.py  models.py  utils.py
frontend/streamlit/pages/: Database_Dashboard.py  Document_Management.py  FAISS_Dashboard.py
frontend/streamlit/utils/: asset_manager.py
llamastack/config/: llamastack-config.yaml  m4_config.yaml  ollama-example.yaml
podman/: .containerignore  Containerfile.api  Containerfile.frontend  Containerfile.llamastack  README.md  podman-compose.yml
sample_docs/: sample_document.md
scripts/: init-models.sh  start.sh
src/: __init__.py  api.py  feast_rag_pipeline.py  feast_rag_retriever.py  rag_pipeline.py
static/: index.html  script.js  style.css
tests/: rag_test_questions.txt  test_rag_pipeline.py  test_web_links.txt
